tests/pass/13_namespaces.lang
пространство Утилиты {
    функция запись(строка с) : пусто {
        печать(с);
    }
}

функция Начало() : целое {
    Утилиты::запись("Привет из пространства имен!");
    вернуть 0;
}
