tests/fail/26_input_with_args.lang
// ОЖИДАЕТСЯ ОШИБКА: требует ровно 0 аргумент
функция Начало() : целое {
    строка с = ввод("подсказка");
    вернуть 0;
}
